Change name color

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="mx-auto w-full p-8 sm:w-3/4 mt-8">
 
         <section>
-            <h1 class="text-3xl sm:text-5xl font-bold uppercase text-gray-100">Jemar Sabocido</h1>
-            <span class="text-gray-300 text-sm sm:text-xl uppercase">
+            <h1 class="text-3xl sm:text-5xl font-bold uppercase text-cyan-300">Jemar Sabocido</h1>
+            <span class="text-gray-100 text-sm sm:text-xl uppercase">
                 Caloocan City, Philippines
                 |
                 sabocidojemar@gmail.com
@@ -26,7 +26,7 @@
 
 
             <p class="mt-12 text-normal sm:text-lg text-gray-300 sm:w-[800px]">
-                Hi, I am 3rd Year IT student at Our Lady of Fatima University, my primary focus is on web
+                Hi, I am 3rd year IT student at Our Lady of Fatima University, my primary focus is on web
                 development, particularly back-end development using the Laravel framework. I have a passion for
                 learning about the latest technologies and trends in this field, and I am constantly seeking out
                 new opportunities to expand my knowledge and skills.
