--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <pre data-prefix="~" class="bg-info text-info-content"><code>["php", "js", "git", "Laravel"]</code></pre>
             <pre></pre>
             <pre data-prefix=">"><code>sabocido.my_hobbies</code></pre> 
-            <pre data-prefix="~" class="bg-info text-info-content"><code>"I just coding stuff lol."</code></pre>
+            <pre data-prefix="~" class="bg-info text-info-content"><code>"I just love coding stuff lol."</code></pre>
         </div>
 
         <section class="mt-16 text-center">
